--- a/frontend/src/pages/assistant/exam_paper_list.css
+++ b/frontend/src/pages/assistant/exam_paper_list.css
@@ -63,7 +63,7 @@
     background-color: #416de2;
 }
 
-.modal-overlay {
+.paper-modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -129,6 +129,7 @@
     color: white;
 }
 
+.paper-modal-overlay 
 .modal-buttons button:last-child {
     background-color: #ccc;
 }
